# aband-parachain

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.github/workflows/: test-code.yml
docs/: add-validator.md  build-docker.md  launch-testnet.md  manual-test.md  update-collator.md  如何启动测试网.md  如何在本地编译你的docker.md  手动测试.md
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/collators/: Cargo.toml
pallets/collators/src/: README.md  benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/group/: Cargo.toml
pallets/group/src/: group_id.rs  lib.rs
pallets/server/: Cargo.toml
pallets/server/src/: lib.rs  server_id.rs  traits.rs
pallets/template/: Cargo.toml
polkadot-launch/: config.json
runtime/: Cargo.toml
runtime/src/: assets.rs  collective.rs  consensus.rs  constants.rs  lib.rs  local.rs  origin.rs  orml.rs  staking.rs  types.rs  validators.rs  xcm_config.rs
runtime/src/primitives/: constants.rs  mod.rs  origin.rs  types.rs
runtime/src/primitives/weights/: block_weights.rs  extrinsic_weights.rs  paritydb_weights.rs  rocksdb_weights.rs
scripts/: benchmarkall.sh  build.sh  config.json  node_builder.Dockerfile  polkadot.Dockerfile  start_testnet.Dockerfile  start_testnet.sh
