[package]
name = "aband-runtime"
version = "0.1.0"
authors = ["Anonymous"]
description = "A new Cumulus FRAME-based Substrate Runtime, ready for hacking together a parachain."
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/PureStake/cumulus/"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
hex-literal = { version = "0.3.4", optional = true }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
smallvec = "1.10.0"

# Local
pallet-template = { path = "../pallets/template", default-features = false }
pallet-collators = { path = "../pallets/collators", default-features = false }
pallet-group = { path = "../pallets/group", default-features = false }

# nimbus
nimbus-primitives = { git = "https://github.com/PureStake/nimbus.git", default-features = false, branch = "moonbeam-polkadot-v0.9.37"}
pallet-author-inherent = { git = "https://github.com/PureStake/nimbus.git", default-features = false, branch = "moonbeam-polkadot-v0.9.37"}
pallet-author-slot-filter = { git = "https://github.com/PureStake/nimbus.git", default-features = false, branch = "moonbeam-polkadot-v0.9.37"}

# orml
orml-tokens = { git = "https://github.com/Aband-Network/open-runtime-module-library.git", default-features = false, branch = "aband-polkadot-v0.9.37" }
orml-traits = { git = "https://github.com/Aband-Network/open-runtime-module-library.git", default-features = false, branch = "aband-polkadot-v0.9.37" }
orml-currencies = { git = "https://github.com/Aband-Network/open-runtime-module-library.git", default-features = false, branch = "aband-polkadot-v0.9.37" }
orml-utilities = { git = "https://github.com/Aband-Network/open-runtime-module-library.git", default-features = false, branch = "aband-polkadot-v0.9.37" }

# Substrate
frame-benchmarking = { git = "https://github.com/PureStake/substrate", default-features = false, optional = true, branch = "moonbeam-polkadot-v0.9.37" }
frame-executive = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
frame-support = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
frame-system = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
frame-system-benchmarking = { git = "https://github.com/PureStake/substrate", default-features = false, optional = true, branch = "moonbeam-polkadot-v0.9.37" }
frame-system-rpc-runtime-api = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
frame-try-runtime = { git = "https://github.com/PureStake/substrate", default-features = false, optional = true, branch = "moonbeam-polkadot-v0.9.37" }
pallet-aura = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
pallet-authorship = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
pallet-balances = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
pallet-session = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
pallet-sudo = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
pallet-transaction-payment = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
pallet-randomness-collective-flip = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "moonbeam-polkadot-v0.9.37" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
sp-api = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
sp-block-builder = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
sp-consensus-aura = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
sp-core = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
sp-inherents = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
sp-offchain = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
sp-runtime = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
sp-session = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
sp-std = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
sp-transaction-pool = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
sp-version = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
sp-io = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
sp-staking = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
pallet-nomination-pools-runtime-api = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
sp-authority-discovery = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }

# staking
pallet-session-benchmarking = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
pallet-staking = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
pallet-staking-reward-curve = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
frame-election-provider-support = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
pallet-timestamp = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
pallet-collective = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
pallet-election-provider-multi-phase = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
pallet-treasury = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
pallet-bags-list = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
pallet-nomination-pools = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
pallet-authority-discovery = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
pallet-utility = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
pallet-offences = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
pallet-im-online = { git = "https://github.com/PureStake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }

# Polkadot
pallet-xcm = { git = "https://github.com/PureStake/polkadot", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
polkadot-parachain = { git = "https://github.com/PureStake/polkadot", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
polkadot-runtime-common = { git = "https://github.com/PureStake/polkadot", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
xcm = { git = "https://github.com/PureStake/polkadot", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
xcm-builder = { git = "https://github.com/PureStake/polkadot", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
xcm-executor = { git = "https://github.com/PureStake/polkadot", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }

# Cumulus
cumulus-pallet-aura-ext = { git = "https://github.com/PureStake/cumulus.git", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/PureStake/cumulus.git", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/PureStake/cumulus.git", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
cumulus-pallet-session-benchmarking = {git = "https://github.com/PureStake/cumulus.git", branch = "moonbeam-polkadot-v0.9.37", default-features = false, version = "3.0.0"}
cumulus-pallet-xcm = { git = "https://github.com/PureStake/cumulus.git", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/PureStake/cumulus.git", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
cumulus-primitives-core = { git = "https://github.com/PureStake/cumulus.git", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/PureStake/cumulus.git", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/PureStake/cumulus.git", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
parachain-info = { git = "https://github.com/PureStake/cumulus.git", branch = "moonbeam-polkadot-v0.9.37", default-features = false }

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-template/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-randomness-collective-flip/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"polkadot-parachain/std",
	"polkadot-runtime-common/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-io/std",
	"sp-staking/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	# nimbus
	"nimbus-primitives/std",
	"pallet-author-inherent/std",
	"pallet-author-slot-filter/std",
	# staking
	"pallet-session-benchmarking/std",
	"pallet-staking/std",
	"frame-election-provider-support/std",
	"pallet-collective/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-treasury/std",
	"pallet-bags-list/std",
	"pallet-nomination-pools/std",
	"pallet-nomination-pools-runtime-api/std",
	"pallet-collators/std",
	"sp-authority-discovery/std",
	"pallet-authority-discovery/std",
	"pallet-utility/std",
	"pallet-offences/std",
	"pallet-im-online/std",
	# orml
	"orml-tokens/std",
	"orml-traits/std",
	"orml-currencies/std",
	"orml-utilities/std",
	"pallet-group/std",
]

runtime-benchmarks = [
	"hex-literal",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
#	"pallet-template/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"pallet-collators/runtime-benchmarks",
]

try-runtime = [
#	"cumulus-pallet-aura-ext/try-runtime",
#	"cumulus-pallet-dmp-queue/try-runtime",
#	"cumulus-pallet-parachain-system/try-runtime",
#	"cumulus-pallet-xcm/try-runtime",
#	"cumulus-pallet-xcmp-queue/try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime",
#	"pallet-aura/try-runtime",
#	"pallet-authorship/try-runtime",
#	"pallet-balances/try-runtime",
#	"pallet-session/try-runtime",
#	"pallet-sudo/try-runtime",
#	"pallet-timestamp/try-runtime",
#	"pallet-transaction-payment/try-runtime",
#	"pallet-xcm/try-runtime",
#	"parachain-info/try-runtime",
]
